--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,9 @@ jobs:
             - run:
                   name: Install Dependencies
                   command: npm install
-            - save_cache:
-                  key: v1-npm-deps-{{ checksum "package-lock.json" }}
-                  paths:
-                      - ./node_modules
             - run:
                   name: Build
                   command: npm build
             - run:
                   name: Firebase Deploy
-                  command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only hosting
+                  command: firebase deploy --token "$FIREBASE_TOKEN" --only hosting
