--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,9 @@ jobs:
                   name: Install Dependencies
                   command: npm install firebase
             - run:
-                  name: Install Dependencies
-                  command: npm install firebase-tools
-            - run:
                   name: Build
                   command: npm build
             - run:
                   name: Firebase Deploy
-                  command: firebase deploy --token "$FIREBASE_TOKEN" --only hosting
+                  command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only hosting
+
