--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,21 @@ jobs:
         docker:
             - image: circleci/node:10.16.0
         working_directory: ~/repo
+        - checkout 
         steps:
+        - restore_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
             - run:
                   name: Install Dependencies
                   command: npm install
-            - run:
+        - save_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
+            - ./node_modules
+                - run:
                   name: Build
                   command: npm build
-            - run:
+                - run:
                   name: Firebase Deploy
                   command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only hosting
 
