--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/noxlock/Portfolio#readme",
   "dependencies": {
-    "firebase": "^7.5.0",
-    "firebase-tools": "^7.8.1"
+    "firebase": "^7.5.0"
+  },
+  "devDependencies": {
+    "firebase-tools": "^11.15.0"
   }
 }
