--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,7 @@ jobs:
             command: npm build
         - run:
             name: Firebase Deploy
-            command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only hosting
+            command: |
+              echo $FIREBASE_KEY > credentials.json
+              GOOGLE_APPLICATION_CREDENTIALS=credentials.json firebase deploy
 
