--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
             only:
                 - master
         docker:
-            - image: circleci/node:14.18.0
+            - image: cimg/node
         working_directory: ~/repo
         steps:
         - checkout 
