--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
             only:
                 - master
         docker:
-            - image: cimg/node
+            - image: cimg/node:20.10.0
         working_directory: ~/repo
         steps:
         - checkout 
